# AI_music

./: .gitignore  CODE_WIKI.md  MUSIC_AI_AGENT_Z_DESIGN.md  README.md  test_env_loading.py  test_kimi_api.py
claudio/: .env.example  main.py  pyproject.toml
claudio/config/: config.py
claudio/core/: device_control.py  recommendation_engine.py  scene_aware_engine.py
claudio/data/: README.md  data_importer.py  quick_add_song.py
claudio/data/history/: sample_history.json
claudio/data/playlists/: sample_playlists.json
claudio/data/songs/: sample_songs.json
claudio/integrations/: claude_integration.py  kimi_integration.py
claudio/models/: music.py
frontend/: index.html  package.json
frontend/src/: App.jsx  SongManager.jsx  index.css
