[project]
name = "claudio-music-agent"
version = "0.1.0"
description = "AI music agent that provides personalized music recommendations"
authors = [
    { name = "User", email = "user@example.com" },
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.54.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    "python-dateutil>=2.8.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
]

[project.scripts]
start = "uvicorn main:app --reload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
